import org.gradle.jvm.toolchain.JavaLanguageVersion
plugins {
    id "maven-publish"
    id "idea"
    id "io.freefair.lombok" version "8.10.2" apply false
    id "net.neoforged.moddev.legacyforge" version "${mdg_version}" apply false
}
apply plugin: "net.neoforged.moddev.legacyforge"

//Print out JVM information so that we know what version is running. Extreamly useful for people to know when helping you.
println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))

archivesBaseName = "${project.archive_base_name}"

def isCI = System.getenv("GITHUB_ACTION")
def gitHash() {
    String hash = System.getenv("GITHUB_SHA")
    if (hash != null) return hash.substring(0,8)
    return ""
}

allprojects {
    apply plugin: "maven-publish"
    apply plugin: "java"
    apply plugin: "idea"
    apply plugin: "io.freefair.lombok"
    group = project.maven_group
    version = "${project.mod_version}-${project.minecraft_version}"
    java.toolchain.languageVersion = JavaLanguageVersion.of(17)


    apply from: 'https://raw.githubusercontent.com/GT-Reimagined/GradleScripts/main/repositories.gradle'

    java {
        withSourcesJar()
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.encoding = 'UTF-8'
    }

    if (isCI) {
        def isRELEASE = System.getenv("GITHUB_RELEASE")
        if (!isRELEASE){
            version = version + "-" + gitHash()
        }
        println("In CI mode")
    }
}

legacyForge {
    version = "${project.minecraft_version}-${project.forge_version}"
    parchment {
        minecraftVersion = project.minecraft_version
        mappingsVersion = project.mappings_version
    }
    runs {
        client {
            client()

        }
        data {
            data()
        }
        server {
            server()
        }
    }
    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

mixin {
    add sourceSets.main, "gtlib.refmap.json"
    config "gtlib.mixins.json"
    config "gtlib.rei.mixins.json"
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}
obfuscation {
    createRemappingConfiguration(configurations.localRuntime)
}

dependencies {
    implementation(project(":tesseract-forge"))
    compileOnly(project(":tesseract-common"))
    compileOnly(project(":tesseract-graph"))
    jarJar("org.gt-reimagined:tesseract-forge:${project.tesseract_version}-${project.minecraft_version}")

    //MIXIN
    annotationProcessor 'net.fabricmc:sponge-mixin:0.11.4+mixin.0.8.5'
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.4"))
    jarJar("io.github.llamalad7:mixinextras-forge:0.5.4:slim")
    implementation("io.github.llamalad7:mixinextras-forge:0.5.4")
    implementation("org.jetbrains:annotations:26.0.1")
    //required dependencies
    modImplementation(jarJar("dev.trinsdar:arrp-forge:${project.arrp_version}"))
    modImplementation(jarJar("dev.trinsdar:terraform-utils-v1:${terraform_version}"))
    modImplementation(jarJar("org.gt-reimagined:structurelib-forge:${project.structurelib_version}-${project.minecraft_version}"))
    modImplementation(jarJar("com.teamresourceful.resourcefullib:resourcefullib-forge-${project.minecraft_version}:${project.resourcefullib_version}"))
    implementation("com.teamresourceful:yabn:${project.yabn_version}")
    modImplementation("maven.modrinth:carbon-config:${project.carbon_config_version}")
    jarJar("maven.modrinth:carbon-config:${project.carbon_config_version}"){
        version {
            prefer(project.carbon_config_version)
        }
    }
    modImplementation(jarJar("net.createmod.ponder:Ponder-Forge-${minecraft_version}:${ponder_version}"))
    //modImplementation(jarJar("net.createmod.catnip:Catnip-Forge-${minecraft_version}:${catnip_version}"))
    modImplementation(jarJar("dev.engine-room.flywheel:flywheel-forge-${project.minecraft_version}:${project.flywheel_version}"))
    modImplementation(jarJar("brachy.modularui:modularui-mc${project.minecraft_version}:${project.mui_version}"))
    //optional dependencies
    modCompileOnly("mezz.jei:jei-${project.minecraft_version}-forge:${project.jei_version}")
    modCompileOnly("me.shedaniel:RoughlyEnoughItems-forge:${project.rei_version}")
    modCompileOnly("dev.emi:emi-forge:${project.emi_version}+${project.minecraft_version}")
    modCompileOnly("me.shedaniel.cloth:cloth-config-forge:${project.cloth_config_version}")
    modImplementation("com.blamejared.crafttweaker:CraftTweaker-forge-${project.minecraft_version}:${project.crafttweaker_version}")
    modImplementation("dev.latvian.mods:kubejs-forge:${project.kubejs_version}")
    modImplementation("dev.latvian.mods:rhino-forge:${project.rhino_version}")
    modImplementation("dev.architectury:architectury-forge:${project.architectury_version}")
    modCompileOnly("curse.maven:the-one-probe-245211:${project.top_forge_version}")
    modImplementation("curse.maven:curios-309927:${project.curios_version}")
    modCompileOnly("curse.maven:jade-324717:${project.jade_version}")
    //runtime deps
    switch (project.runtime_itemviewer) {
        case "emi":
            modLocalRuntime("dev.emi:emi-forge:${emi_version}")
            break
        case "rei":
            modLocalRuntime("me.shedaniel:RoughlyEnoughItems-forge:${project.rei_version}")
            break
        case "jei":
            modLocalRuntime("mezz.jei:jei-${project.minecraft_version}-forge:${project.jei_version}")
            break
    }

    switch (project.runtime_tooltip_mod) {
        //case "wthit":
        //    localRuntime "mcp.mobius.waila:wthit:neo-${project.wthit_version}"
        //    break
        case "jade":
            modLocalRuntime("curse.maven:jade-324717:${project.jade_version}")
            break
        case "top":
            modLocalRuntime("curse.maven:the-one-probe-245211:${project.top_forge_version}")
            break
    }
}


processResources {
    var replaceProperties = [
        minecraft_version_range  : project.minecraft_version_range,
        forge_version_range      : project.forge_version_range,
        loader_version_range     : project.loader_version_range,
        version                  : project.mod_version
    ]
    inputs.properties replaceProperties

    filesMatching("META-INF/mods.toml") {
        expand replaceProperties
    }
}

jar{
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : "GT-Reimagined",
                'Specification-Version'   : '1', // We are version 1 of ourselves
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.version,
                'Implementation-Vendor'   : "GT-Reimagined",
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs" : "gtlib.mixins.json,gtlib.rei.mixins.json"
        ])
    }
}

publishing {
    publications {
        mavenJava(org.gradle.api.publish.maven.MavenPublication) {
            artifactId = "gt-lib"
            from components.java
        }
    }
    repositories {
        def isJenkins = System.getenv("CI")
        def isRELEASE = System.getenv("GITHUB_RELEASE")
        if (isRELEASE){
            maven {
                name = "GTMaven"
                url = "https://repo.repsy.io/mvn/trinsdar/gregtech-intergalactical/"
                credentials {
                    username = System.getenv("MAVEN_USERNAME")
                    password = System.getenv("MAVEN_PASSWORD")
                }
            }
        } else if (isJenkins) {
            maven {
                url System.getenv("local_maven_url")
            }
        } else {
            mavenLocal()
        }
    }
}